# Nexus-WS

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: events.rs  lib.rs  main.rs  state.rs  ws.rs
websocket_client/: check_users.js  package-lock.json  package.json  server.js  todo.txt
websocket_client/prisma/: schema.prisma
websocket_client/public/about/: index.html
websocket_client/public/auth/: AuthHandler.mjs  auth.css  index.html
websocket_client/public/contact/: index.html
websocket_client/public/css/: main.css  profile.css
websocket_client/public/home/: index.html
websocket_client/public/js/: main.js
websocket_client/public/js/core/: UI.mjs
websocket_client/public/js/profile/: ProfileHandler.mjs
websocket_client/public/js/tools/: Handler.mjs  NavHandler.mjs  SocketManager.mjs
websocket_client/secure_views/chat/: index.html
websocket_client/secure_views/profile/: index.html
